Fixed blurry image displayed in the gui

--- a/gui/main/static/geqie/css/styles.css
+++ b/gui/main/static/geqie/css/styles.css
@@ -143,6 +143,9 @@ textarea:focus, select:focus {
     height: 100%;
     object-fit: contain;
     position: absolute;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
 }
 
 .box-right img {
@@ -150,6 +153,9 @@ textarea:focus, select:focus {
     height: 100%;
     object-fit: contain;
     position: absolute;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
 }
 
 .arrow-container {
